--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,57 +1,66 @@
+html {
+  height: 100%;
+}
+
 body {
-  line-height: 2;
-  padding: 0;
-  margin: 0;
   background: #fff;
+  height: 100%;
+  line-height: 2;
+  margin: 0;
+  padding: 0;
 }
 
 img {
   display: block;
-  width: 100%;
-  max-width: 100%;
   height: auto;
+  max-width: 100%;
 }
 
 .header-area {
-  border-bottom: double #ccc;
   background: #1a4488;
+  border-bottom: double #ccc;
+
   .link {
     color: #fff;
   }
 }
 
 .header-box {
-  max-width: 980px;
-  margin: auto;
-  padding: 1em;
   color: #fff;
+  margin: auto;
+  max-width: 62em;
+  padding: 1em;
 }
 
 .main-area {
-  max-width: 580px;
-  margin: 40px auto;
+  margin: 3em auto;
+  max-width: 38em;
 }
 
 .footer-area {
-  border-top: double #ccc;
   background: #F5F5F5;
+  border-top: double #ccc;
+  position: sticky;
+  top: 100vh;
 }
 
 .footer-box {
-  max-width: 980px;
   margin: auto;
+  max-width: 980px;
 }
 
-.richText-box{
-  img{
-    margin: 1em auto;
+.richText-box {
+  img {
     border: 1px solid #ccc;
+    margin: 1em auto;
   }
 }
-.content-heading{
+
+.content-heading {
   line-height: 1.3;
 }
-.content-footer{
+
+.content-footer {
   margin: 3em auto 0 auto;
   text-align: center;
 }
